k8s/services/media/app/sonarr/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: media
  hostnames:
    - sonarr.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: sonarr
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sonarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sonarr
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/sonarr/
    clientID: sonarr
    clientSecret:
      name: sonarr-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
